force-app/main/default/objects/Account/fields/Account_Priority__c.field-meta.xml
<CustomField>
    <fullName>Account_Priority__c</fullName>
    <formula>IF( ( AnnualRevenue &gt;20000000),&quot;High Priority&quot;, IF(AND( AnnualRevenue &lt; 20000000, AnnualRevenue &gt; 10000000),&quot;Medium Priority&quot;, &quot;Low Priority&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Priority</label>
    <type>Text</type>
</CustomField>