force-app/main/default/objects/Account/fields/Account_Source_Custom__c.field-meta.xml
<CustomField>
    <fullName>Account_Source_Custom__c</fullName>
    <description>This field is used to flip the record type to data.com. It is populated via lead conversion from the Sourced from Data.com (Managed) lead field. Currently not on any layout.</description>
    <label>Account Source Custom</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Added from Data.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>