force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <formula>IF( Overdue_Invoices__c &gt; 0, IMAGE(&apos;/resource/acct_pastdue&apos;, &apos;Past Due&apos;), IMAGE(&apos;/resource/acct_paid&apos;, &apos;Paid in Full&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>