force-app/main/default/objects/Account/fields/Agency_Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>Agency_Agreement_Number__c</fullName>
    <label>Agency Agreement Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>