force-app/main/default/objects/Account/fields/Agency_Agreement_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Agency_Agreement_Y_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agency Agreement Y/N?</label>
    <type>Checkbox</type>
</CustomField>