force-app/main/default/objects/Account/fields/Agency_Producer__c.field-meta.xml
<CustomField>
    <fullName>Agency_Producer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Broker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Agency Broker)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>