force-app/main/default/objects/Account/fields/Annual_Admissions__c.field-meta.xml
<CustomField>
    <fullName>Annual_Admissions__c</fullName>
    <description>Hospital Annual Admissions</description>
    <label>Annual Admissions</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>