force-app/main/default/objects/Account/fields/Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Income__c</fullName>
    <label>Annual Income</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>