force-app/main/default/objects/Account/fields/AppNo__c.field-meta.xml
<CustomField>
    <fullName>AppNo__c</fullName>
    <label>AppNo</label>
    <length>25</length>
    <type>Text</type>
</CustomField>