force-app/main/default/objects/Account/fields/Approved_Caller_1__c.field-meta.xml
<CustomField>
    <fullName>Approved_Caller_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved Caller 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Approved to Call For</relationshipLabel>
    <relationshipName>ApprovedToCall1</relationshipName>
    <type>Lookup</type>
</CustomField>