force-app/main/default/objects/Account/fields/Approved_Caller_2__c.field-meta.xml
<CustomField>
    <fullName>Approved_Caller_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved Caller 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Approved to Call For2</relationshipLabel>
    <relationshipName>ApprovedToCall2</relationshipName>
    <type>Lookup</type>
</CustomField>