force-app/main/default/objects/Account/fields/AVG_M1_Effectiveness_of_Care__c.field-meta.xml
<CustomField>
    <fullName>AVG_M1_Effectiveness_of_Care__c</fullName>
    <label>AVG M1 Effectiveness of Care</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>