force-app/main/default/objects/Account/fields/AVG_M2_Access_Availability_of_Care__c.field-meta.xml
<CustomField>
    <fullName>AVG_M2_Access_Availability_of_Care__c</fullName>
    <label>AVG M2 Access/Availability of Care</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>