force-app/main/default/objects/Account/fields/AVG_M3_Experience_of_Care__c.field-meta.xml
<CustomField>
    <fullName>AVG_M3_Experience_of_Care__c</fullName>
    <label>AVG M3 Experience of Care</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>