force-app/main/default/objects/Account/fields/AVG_M4Utilization_Risk_Adjusted_Utl__c.field-meta.xml
<CustomField>
    <fullName>AVG_M4Utilization_Risk_Adjusted_Utl__c</fullName>
    <label>AVG M4Utilization/Risk Adjusted Utl</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>