force-app/main/default/objects/Account/fields/AVG_M5_Health_Plan_Desc_Info__c.field-meta.xml
<CustomField>
    <fullName>AVG_M5_Health_Plan_Desc_Info__c</fullName>
    <label>AVG M5 Health Plan Desc Info.</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>