force-app/main/default/objects/Account/fields/AVG_M6_Measures_using_CDS__c.field-meta.xml
<CustomField>
    <fullName>AVG_M6_Measures_using_CDS__c</fullName>
    <label>AVG M6 Measures using CDS</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>