force-app/main/default/objects/Account/fields/Beds__c.field-meta.xml
<CustomField>
    <fullName>Beds__c</fullName>
    <description># Beds</description>
    <label>Beds</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>