force-app/main/default/objects/Account/fields/Billing_NPI__c.field-meta.xml
<CustomField>
    <fullName>Billing_NPI__c</fullName>
    <label>Billing NPI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>