force-app/main/default/objects/Account/fields/Business_Family_Members_Data__c.field-meta.xml
<CustomField>
    <fullName>Business_Family_Members_Data__c</fullName>
    <formula>DandbCompany.FamilyMembers</formula>
    <label>Number of Business Family Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>