force-app/main/default/objects/Account/fields/Call_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Call_Frequency__c</fullName>
    <label>Call Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>weekly</fullName>
            </value>
            <value>
                <fullName>bi-weekly</fullName>
            </value>
            <value>
                <fullName>monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>