force-app/main/default/objects/Account/fields/Care_Manager_Sharing_Preference__c.field-meta.xml
<CustomField>
    <fullName>Care_Manager_Sharing_Preference__c</fullName>
    <label>Care Manager Sharing Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>