force-app/main/default/objects/Account/fields/Care_Program_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Care_Program_Enrolled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls which page a patient see&apos;s in the Makana Health Community. If this box is checked, they will see the Patient Enrolled Page Variation.</description>
    <label>Care Program Enrolled</label>
    <type>Checkbox</type>
</CustomField>