force-app/main/default/objects/Account/fields/Certifications__c.field-meta.xml
<CustomField>
    <fullName>Certifications__c</fullName>
    <label>Certifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Medicade</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>