force-app/main/default/objects/Account/fields/Claim_System__c.field-meta.xml
<CustomField>
    <fullName>Claim_System__c</fullName>
    <label>Claim System</label>
    <length>40</length>
    <type>Text</type>
</CustomField>