force-app/main/default/objects/Account/fields/Competitive_Certifications__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Certifications__c</fullName>
    <label>Competitive Certifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>SUN</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>