force-app/main/default/objects/Account/fields/CPQ_DemoSettings__c.field-meta.xml
<CustomField>
    <fullName>CPQ_DemoSettings__c</fullName>
    <label>CPQ Demo Settings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual Benefits</fullName>
            </value>
            <value>
                <fullName>Large Group Benefits</fullName>
            </value>
            <value>
                <fullName>MedTech</fullName>
            </value>
            <value>
                <fullName>Medical Device</fullName>
            </value>
            <value>
                <fullName>Pharma</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>