force-app/main/default/objects/Account/fields/CPQ_PB__c.field-meta.xml
<CustomField>
    <fullName>CPQ_PB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the Price Book for use with CPQ.</description>
    <inlineHelpText>Identifies the Price Book for use with CPQ.</inlineHelpText>
    <label>Default CPQ Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Accounts (Default CPQ Price Book)</relationshipLabel>
    <relationshipName>AccountsCPQ</relationshipName>
    <type>Lookup</type>
</CustomField>