force-app/main/default/objects/Account/fields/CPQ_QP__c.field-meta.xml
<CustomField>
    <fullName>CPQ_QP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the appropriate Guided Selling process for the account.</description>
    <inlineHelpText>Identifies the appropriate Guided Selling process for the account.</inlineHelpText>
    <label>Default Quote Process</label>
    <referenceTo>SBQQ__QuoteProcess__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>