force-app/main/default/objects/Account/fields/Current_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Current_Relationship__c</fullName>
    <label>Current Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Needs Rescue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>