force-app/main/default/objects/Account/fields/Current_Situation__c.field-meta.xml
<CustomField>
    <fullName>Current_Situation__c</fullName>
    <label>Current Situation</label>
    <type>TextArea</type>
</CustomField>