force-app/main/default/objects/Account/fields/Current_Year_Target__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Target__c</fullName>
    <description>Roll-up summary of the &quot;Target&quot; field on any Channel Plan marked as &quot;Active&quot;.</description>
    <label>Current Year Target</label>
    <summarizedField>SFDC_Channel_Account_Plan__c.Target__c</summarizedField>
    <summaryFilterItems>
        <field>SFDC_Channel_Account_Plan__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SFDC_Channel_Account_Plan__c.Partner_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>