force-app/main/default/objects/Account/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <externalId>true</externalId>
    <label>Customer Account #</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>