force-app/main/default/objects/Account/fields/Customer_Satisfaction_Index__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_Index__c</fullName>
    <inlineHelpText>What does this customer think of us?</inlineHelpText>
    <label>Customer Satisfaction Index</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A - Extremely Satisfied - Customer Evangelist</fullName>
            </value>
            <value>
                <fullName>B - Satisfied</fullName>
            </value>
            <value>
                <fullName>C - Neutral</fullName>
            </value>
            <value>
                <fullName>D - Dissatisfied - At risk of losing business</fullName>
            </value>
            <value>
                <fullName>F - Unsatisfactory - Losing Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>