force-app/main/default/objects/Account/fields/Customer_Value__c.field-meta.xml
<CustomField>
    <fullName>Customer_Value__c</fullName>
    <formula>IF( (Net_Worth__c &gt;2000000),&quot;High Priority&quot;, IF(AND(Net_Worth__c &lt; 2000000, Net_Worth__c &gt; 1000000),&quot;Medium Priority&quot;, &quot;Low Priority&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Value</label>
    <type>Text</type>
</CustomField>