force-app/main/default/objects/Account/fields/D_B_PAYDEX_Score__c.field-meta.xml
<CustomField>
    <fullName>D_B_PAYDEX_Score__c</fullName>
    <label>D&amp;B PAYDEX Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>