force-app/main/default/objects/Account/fields/D_B_Rating__c.field-meta.xml
<CustomField>
    <fullName>D_B_Rating__c</fullName>
    <label>D&amp;B Rating</label>
    <length>4</length>
    <type>Text</type>
</CustomField>