force-app/main/default/objects/Account/fields/Default_Field_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Default_Field_Entitlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the default field service entitlement to use for this account and all of its assets</inlineHelpText>
    <label>Default Field Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>