force-app/main/default/objects/Account/fields/Default_for_FSL_Snap_Ins__c.field-meta.xml
<CustomField>
    <fullName>Default_for_FSL_Snap_Ins__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default for FSL Snap-Ins</label>
    <type>Checkbox</type>
</CustomField>