force-app/main/default/objects/Account/fields/Default_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Default_Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Default price book for work orders</inlineHelpText>
    <label>Default Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>