force-app/main/default/objects/Account/fields/Discovery_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Explanation__c</fullName>
    <label>Discovery_Explanation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>