force-app/main/default/objects/Account/fields/Discovery_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Outcome__c</fullName>
    <label>Discovery_Outcome</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>