force-app/main/default/objects/Account/fields/DiscoveryOutcome__c.field-meta.xml
<CustomField>
    <fullName>DiscoveryOutcome__c</fullName>
    <label>Discovery_Outcome</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>