force-app/main/default/objects/Account/fields/DiscoveryPrescription__c.field-meta.xml
<CustomField>
    <fullName>DiscoveryPrescription__c</fullName>
    <label>Discovery_Prescription</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>