force-app/main/default/objects/Account/fields/dkom__Language__c.field-meta.xml
<CustomField>
    <fullName>dkom__Language__c</fullName>
    <inlineHelpText>Preferred spoken language of this customer account. This is used in conjunction with Offer Management. This field may be relabeled and repurposed for something other than language.</inlineHelpText>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>