force-app/main/default/objects/Account/fields/Einstein_Article_2_Date__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Article_2_Date__c</fullName>
    <inlineHelpText>Enter the date for the second article you&apos;d like to display</inlineHelpText>
    <label>Einstein - Article 2 Date</label>
    <type>Date</type>
</CustomField>