force-app/main/default/objects/Account/fields/Einstein_Article_3_URL__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Article_3_URL__c</fullName>
    <inlineHelpText>Enter the URL for the third article you&apos;d like to display</inlineHelpText>
    <label>Einstein - Article 3 URL</label>
    <type>Url</type>
</CustomField>