force-app/main/default/objects/Account/fields/Email_Sharing_Preference__c.field-meta.xml
<CustomField>
    <fullName>Email_Sharing_Preference__c</fullName>
    <label>Email Sharing Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>