force-app/main/default/objects/Account/fields/Engagement_Status__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Status__c</fullName>
    <formula>IMAGE(CASE( Activity_Status__c , &quot;green&quot;, &quot;/servlet/servlet.FileDownload?file=0154W00000CMt8j&quot;, &quot;yellow&quot;, &quot;/servlet/servlet.FileDownload?file=0154W00000CMt8k&quot;,&quot;red&quot;,&quot;/servlet/servlet.FileDownload?file=0154W00000CMt8l&quot;,&quot;N/A&quot;),&quot;New&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Warns you when days since last activity is in line with the Call Frequency set on the Account</inlineHelpText>
    <label>Engagement Status</label>
    <type>Text</type>
</CustomField>