force-app/main/default/objects/Account/fields/Enrolled_Subscribers__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Subscribers__c</fullName>
    <label>Enrolled Subscribers</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>