force-app/main/default/objects/Account/fields/Epic_Sync__c.field-meta.xml
<CustomField>
    <fullName>Epic_Sync__c</fullName>
    <label>Epic Sync</label>
    <type>DateTime</type>
</CustomField>